base/alertmanager/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: alertmanager
  namespace: monitoring

spec:
  type: ClusterIP

  selector:
    app: alertmanager

  ports:
  - port: 9093
    targetPort: 9093
